# Kerbal

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  Kerbal.xml  choose函数文档.docx  config  kerbal.clang-format  kerbal.format.xml  readme.md  readme.zh.md
cxxmodule/: CMakeLists.txt  kerbal.cppm
cxxmodule/kerbal/: any.cppm  container.cppm
cxxmodule/kerbal/any/: any.cppm  bad_any_cast.cppm
cxxmodule/kerbal/container/: array.cppm  avl_map.cppm  avl_multimap.cppm  avl_multiset.cppm  avl_set.cppm  list.cppm  vector.cppm
include/: CMakeLists.txt
include/kerbal/: module.modulemap
include/kerbal/algorithm/: binary_search.hpp  binary_type_operator.hpp  binary_type_predicate.hpp  dynamic_programming.hpp  heap.hpp  iterator.hpp  kmp.hpp  modifier.hpp  modifiers.hpp  partition.hpp  querier.hpp  search.hpp  sequence_compare.hpp  sort.hpp  swap.hpp
include/kerbal/any/: any.hpp  any_base.hpp  bad_any_cast.hpp  comparable_any.hpp  equality_comparable_any.hpp
include/kerbal/assign/: assign_list.hpp  generic_assign.hpp  ilist.hpp  x.hpp
include/kerbal/attribute/: unused.hpp
include/kerbal/autonm/: avl_ordered.hpp  forward_list.hpp  list.hpp  semi_allocator.hpp
include/kerbal/big/: big_decimal.hpp  big_integer.hpp
include/kerbal/bitset/: bitset.hpp  static_bitset.hpp
include/kerbal/compare/: basic_compare.hpp  binary_type_compare.hpp  minmax.hpp  minmax_element.hpp  predicate.hpp  sequence_compare.hpp  three_way_comparison.hpp
include/kerbal/compatibility/: alignas.hpp  alignof.hpp  attribute_unused.hpp  chrono_suffix.hpp  compatibility_macro.hpp  constexpr.hpp  cv_qualified_function.hpp  except_C++0x.hpp  fixed_width_integer.hpp  is_constant_evaluated.hpp  method_overload_tag.hpp  move.hpp  namespace_std_scope.hpp  noexcept.hpp  static_assert.hpp  tick_count.h  tick_count.hpp  unreachable.hpp  va_arg_compatible_cast.hpp
include/kerbal/compression/: huffman.hpp  huffman_ptr.hpp
include/kerbal/concepts/: assignable_from.hpp  boolean.hpp  config.hpp  constructible_from.hpp  convertible_to.hpp  copy_constructible.hpp  copyable.hpp  default_initializable.hpp  derived_from.hpp  destructible.hpp  integral.hpp  movable.hpp  move_constructible.hpp  pointer.hpp  regular.hpp  same_as.hpp  semiregular.hpp  swappable.hpp  swappable_with.hpp
include/kerbal/config/: architecture.hpp  compiler_id.hpp  compiler_private.hpp  compiler_version.hpp  cuda.hpp  cxx_stdlib.hpp  endian.hpp  exceptions.hpp  library_export.hpp  system.hpp  target_type.hpp
include/kerbal/container/: array.hpp  avl_map.hpp  avl_multimap.hpp  avl_multiset.hpp  avl_ordered.hpp  avl_set.hpp  erasable.hpp  flat_map.hpp  flat_multimap.hpp  flat_multiset.hpp  flat_ordered.hpp  flat_set.hpp  flat_set.old.hpp  flatset.hpp  forward_list.hpp  hash_set.hpp  hash_table.hpp  linked_queue.hpp  linked_stack.hpp  list.hpp  nonmember_container_access.hpp  priority_queue.hpp  rb_ordered.hpp  rb_set.hpp  ring_buffer_queue.hpp  single_list.hpp  span.hpp  static_container_exception.hpp  static_flat_map.hpp  static_flat_multimap.hpp  static_flat_multiset.hpp  static_flat_set.hpp  static_flatset.hpp  static_ordered.hpp  static_priority_queue.hpp  static_queue.hpp  static_stack.hpp  static_vector.hpp  vector.hpp
include/kerbal/coroutine/: config.hpp  done_coroutine.hpp  generator.hpp  lazy.hpp  task.hpp
include/kerbal/costream/: colors.hpp  costream.hpp  palette.hpp
include/kerbal/data_struct/: array_2d.hpp  array_2d_base.hpp  auto_array.hpp  auto_queue.hpp  clist.hpp  hash.hpp  nonmember_container_access.hpp  optional.hpp  raw_storage.hpp  static_array.hpp  static_flatset.hpp  static_priority_queue.hpp  static_queue.hpp  static_stack.hpp  static_vector.hpp
include/kerbal/debug/: debug_ostream.hpp
include/kerbal/dynl/: library.hpp
include/kerbal/fmt/: format.hpp  format_error.hpp  formatter.hpp
include/kerbal/function/: bad_function_call.hpp  bad_function_cast.hpp  function.hpp  function_traits.hpp  identity.hpp  invoke.hpp  invoke_r.hpp  move_only_function.hpp
include/kerbal/hash/: hash.hpp  md5.hpp  murmur_hash2.hpp  sha1.hpp
include/kerbal/iterator/: concept_constraint.hpp  dereference_iterator.hpp  general_back_inserter.hpp  iterator.hpp  iterator_traits.hpp  move_iterator.hpp  repeated_iterator.hpp  reverse_iterator.hpp  stride_iterator.hpp  transform_iterator.hpp
include/kerbal/macro/: join_line.hpp  macro_concat.hpp  pp2expand.hpp  ppexpand.hpp  va_arg_size.hpp
include/kerbal/math/: VarBigInt.hpp  basic_math.hpp  big_integer.hpp  complex.hpp  complexor.hpp  complexor_base.hpp  integral.hpp  numeric.hpp  randnum.hpp  statistics.hpp
include/kerbal/memory/: allocator_traits.hpp  any_storage.hpp  bad_alloc.hpp  bad_array_new_length.hpp  bad_cuda_alloc.hpp  basic_t.hpp  default_delete.hpp  guard.hpp  nothrow_t.hpp  playload.hpp  pointer_alignment.hpp  pointer_traits.hpp  raw_storage.hpp  raw_storage_uninitialized.hpp  uninitialized.hpp  uninitialized_using_allocator.hpp  unique_ptr.hpp
include/kerbal/miscellaneous/: spherical.hpp
include/kerbal/numeric/: bit.hpp  numeric_limits.hpp
include/kerbal/ompalgo/: querier.hpp  sort.hpp
include/kerbal/openmp/: disable_warning.hpp  mutex.hpp
include/kerbal/operators/: addable.hpp  dereferenceable.hpp  equality_comparable.hpp  generic_assign.hpp  incr_decr.hpp  less_than_comparable.hpp  subtractable.hpp
include/kerbal/optional/: bad_optional_access.hpp  boost_optional_type_traits.hpp  is_optional.hpp  nullopt.hpp  optional.hpp  optional_compare.hpp  optional_hash.hpp  optional_settings.hpp  optional_type_traits.hpp  raw_optional.hpp  std_optional_type_traits.hpp
include/kerbal/parallel/: thread.hpp  thread_create_failed.hpp  thread_pool.hpp
include/kerbal/random/: _0_1_distribution.hpp  bernoulli_distribution.hpp  binomial_distribution.hpp  discard_block_engine.hpp  exponential_distribution.hpp  geometric_distribution.hpp  hardware_engine.hpp  istream_engine.hpp  knuth_b_engine.hpp  linear_congruential_engine.hpp  mersenne_twister_engine.hpp  normal_distribution.hpp  perlin_noise.hpp  (+8 more)
src/test/: CMakeLists.txt  test_case.cpp
(+1543 files in other folders)
